refactor: Enhance cookie and CORS configurations for better cross-origin support in development